# rag_chatbot

./: .gitignore  README.md  add_message_retry.py  conversation_test.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.sh
app/: api.py  config.py  main.py
app/models/: chat.py  conversation.py
app/routers/: chat.py  conversation.py  document.py  health.py  maintenance.py
app/services/: __init__.py  chat_model.py  code_processor.py  document_manager.py  document_processor.py  memory_manager.py
app/utils/: chat_model.py  document_manager.py  document_processor.py  memory_manager.py  vector_store.py
sample_data/: artificial_intelligence.txt  space_exploration.txt
tests/: __init__.py  conftest.py  test_endpoints.py  utils.py
